--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,7 +105,7 @@ jobs:
           name: Build front-end
           working_directory: ./frontend
           command:             
-            npm i
+#            npm i
             npm run build                        
       - save_cache:
           paths: [frontend/node_modules]
@@ -126,7 +126,7 @@ jobs:
           name: Back-end build
           working_directory: ./backend
           command:              
-             npm i
+#             npm i
              npm run build             
       - save_cache:
           paths: [backend/node_modules]
