--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,8 +140,8 @@ jobs:
       MY_STEP_NAME: "Test frontend"
     steps:
       - checkout
-      - restore_cache:
-          keys: [frontend-build]
+#      - restore_cache:
+#          keys: [frontend-build]
       - run:
           name: Run tests with JUnit 
           working_directory: ./frontend
@@ -188,14 +188,14 @@ jobs:
       MY_STEP_NAME: "Security scan frontend"    
     steps:
       - checkout
-      - restore_cache:
-          keys: [frontend-build]      
+#      - restore_cache:
+#          keys: [frontend-build]      
       - run:
           name: frontend security check
           working_directory: ./frontend
           command: 
 #            npm i 
-            npm install
+            npm install --force
             npm audit fix --audit-level=critical --force
 #      - slack/notify:
 #          <<: *slack_msg
