--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,12 +143,13 @@ jobs:
 #      - restore_cache:
 #          keys: [frontend-build]
       - run:
-          name: Run tests with JUnit 
+          name: Install junit coverage reporter
           working_directory: ./frontend
-          command:               
-#              npm i
-              npm install -g jest
-              npm test
+          command: npm install --save-dev jest-junit
+      - run:
+          name: Run tests with JUnit as reporter
+          working_directory: ./frontend
+          command: npm test -- --ci --runInBand --reporters=default --reporters=jest-junit && pwd && ls -la /tmp
           environment:
             JEST_JUNIT_OUTPUT_DIR: ./testres
       - store_test_results:
