--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -586,9 +586,11 @@ workflows:
     jobs:
       - install-backend-dependencies
       - install-frontend-dependencies
-      - build-frontend
+      - build-frontend:
+           requires: [install-frontend-dependencies]
 #          context: slack-secrets
-      - build-backend
+      - build-backend:
+           requires: [install-backend-dependencies]
 #          context: slack-secrets
       - test-frontend:
           requires: [build-frontend]
