--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,17 @@ docvaraws: &dok_awscli
 docansibl: &dok_ansible
     docker:
       - image: python:3.7-alpine3.11 
+      
+executors:
+  node:
+    docker:
+      - image: circleci/node:13.8.0
+  python:
+    docker:
+      - image: python:3.9.0-alpine
+  aws:
+    docker:
+      - image: amazon/aws-cli
 
 #slackvarfail: &slack_msg      
 #          event: fail
@@ -93,9 +104,7 @@ commands:
 jobs:
 
   install-backend-dependencies:
-    <<: *dok_node
-    environment: 
-      MY_STEP_NAME: "backend-dependencies"
+    executor: node
     steps:
       - checkout
       - run:
@@ -109,11 +118,8 @@ jobs:
 
 
   install-frontend-dependencies:
-    <<: *dok_node
-    environment:
-      MY_STEP_NAME: "backend-dependencies"
-#    executor: node
-    steps:
+   executor: node
+   steps:
       - checkout
       - run:
           name: npm install
@@ -123,56 +129,42 @@ jobs:
           root: .
           paths:
             - frontend/node_modules
-# -----------------------------  Build front end ----------------------
-  build-frontend:
-    <<: *dok_node
-    environment: 
-      MY_STEP_NAME: "Test frontend"
-    steps:
-      - checkout
-      - restore_cache:
-          keys: [frontend-build]
-      - run:
-          name: Build front-end
-          working_directory: ./frontend
-          command:             
-#            npm i
-            npm run build                        
-      - save_cache:
-          paths: [frontend/node_modules]
-          key: frontend-build          
-#      - slack/notify: 
-#          <<: *slack_msg          
 
-# -----------------------------  Build back end ----------------------
+
   build-backend:
-    <<: *dok_node
-    environment: 
-      MY_STEP_NAME: "Test frontend"
+    executor: node
     steps:
       - checkout
-      - restore_cache:
-          keys: [backend-build]
+      - attach_workspace:
+          at: .
       - run:
-          name: Back-end build
+          name: npm run build
           working_directory: ./backend
-          command:              
-#             npm i
-             npm run build             
-      - save_cache:
-          paths: [backend/node_modules]
-          key: backend-build
- #     - slack/notify:
- #         <<: *slack_msg       
-# -----------------------------  Test front end  ----------------------
-  test-frontend:
-    <<: *dok_node
-    environment: 
-      MY_STEP_NAME: "Test frontend"
+          command: npm run build
+      - persist_to_workspace:
+          root: .
+          paths:
+            - backend/dist
+
+
+  build-frontend:
+    executor: node
     steps:
       - checkout
-#      - restore_cache:
-#          keys: [frontend-build]
+      - attach_workspace:
+          at: .
+      - run:
+          name: npm run build
+          working_directory: ./frontend
+          command: npm run build
+
+
+  test-frontend:
+    executor: node
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
       - run:
           name: Install junit coverage reporter
           working_directory: ./frontend
@@ -182,73 +174,57 @@ jobs:
           working_directory: ./frontend
           command: npm test -- --ci --runInBand --reporters=default --reporters=jest-junit && pwd && ls -la /tmp
           environment:
-            JEST_JUNIT_OUTPUT_DIR: ./testres
+            JEST_JUNIT_OUTPUT_DIR: ./test_results
       - store_test_results:
-          path: ./frontend/testres
+          path: ./frontend/test_results
       - store_artifacts:
-          path: ./frontend/testres
-#      - slack/notify:
-#          <<: *slack_msg
+          path: ./frontend/test_results
 
-# -----------------------------  Test back end  ----------------------                
+
   test-backend:
-    <<: *dok_node
-    environment: 
-      MY_STEP_NAME: "Test backend"    
+    executor: node
     steps:
       - checkout
-      - restore_cache:
-          keys: [backend-build]
+      - attach_workspace:
+          at: .
       - run:
-          name: Run tests with JUnit
+          name: Install junit coverage reporter
           working_directory: ./backend
-          command: 
-#              npm i
-              npm test
+          command: npm install --save-dev jest-junit
+      - run:
+          name: Run tests with JUnit as reporter
+          working_directory: ./backend
+          command: npm test -- --ci --runInBand --reporters=default --reporters=jest-junit && pwd
           environment:
-            JEST_JUNIT_OUTPUT_DIR: ./testres
+            JEST_JUNIT_OUTPUT_DIR: ./test_results
       - store_test_results:
-          path: ./backend/testres
+          path: ./backend/test_results
       - store_artifacts:
-          path: ./backend/testres
-#      - slack/notify:
-#          <<: *slack_msg
+          path: ./backend/test_results
 
-# -----------------------------  Test front end for security ----------            
+
   scan-frontend:
-    <<: *dok_node
-    environment: 
-      MY_STEP_NAME: "Security scan frontend"    
+    executor: node
     steps:
       - checkout
-#      - restore_cache:
-#          keys: [frontend-build]      
+      - attach_workspace:
+          at: .
       - run:
-          name: frontend security check
+          name: Check Frontend against security vulnerabilities
           working_directory: ./frontend
-          command: 
-#            npm i 
-#            npm install --force
-            npm audit fix --audit-level=critical --force
-#      - slack/notify:
-#          <<: *slack_msg
+          command: npm audit fix --audit-level=critical  --force
 
-# -----------------------------  Test front end for security ----------            
+
   scan-backend:
-    <<: *dok_node
-    environment: 
-      MY_STEP_NAME: "Security scan backend"    
+    executor: node
     steps:
-      - checkout  
-#      - restore_cache:
-#          keys: [backend-build]          
+      - checkout
+      - attach_workspace:
+          at: .
       - run:
-          name: backend security check
+          name: Check Backend against security vulnerabilities
           working_directory: ./backend
-          command: 
-            npm audit fix --audit-level=critical --force
- #     - slack/notify:
- #         <<: *slack_msg
+          command: npm audit fix --audit-level=critical  --force
 
 #   -------------------------------------------------------------------------
 #                   AWS  INFRA. PART start from here
@@ -584,26 +560,28 @@ jobs:
 workflows:
   default:
     jobs:
+      ## BUILD AND DEPLOY
       - install-backend-dependencies
       - install-frontend-dependencies
-      - build-frontend:
-           requires: [install-frontend-dependencies]
-#          context: slack-secrets
+
       - build-backend:
-           requires: [install-backend-dependencies]
-#          context: slack-secrets
-      - test-frontend:
-          requires: [build-frontend]
-#          context: slack-secrets
+          requires:
+            - install-backend-dependencies
+      - build-frontend:
+          requires:
+            - install-frontend-dependencies
       - test-backend:
-          requires: [build-backend]
-#          context: slack-secrets
-      - scan-frontend:
-          requires: [build-frontend]
-#          context: slack-secrets
+          requires:
+            - build-backend
+      - test-frontend:
+          requires:
+            -  build-frontend
       - scan-backend:
-          requires: [build-backend]
-#          context: slack-secrets
+          requires:
+            - build-backend
+      - scan-frontend:
+          requires:
+            - build-frontend
       - deploy-infrastructure:
           requires: [build-frontend, build-backend, test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
