--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -248,7 +248,7 @@ jobs:
               --template-file .circleci/files/backend.yml \
               --stack-name udapeoplep3-backend-${CIRCLE_WORKFLOW_ID:0:7} \
               --parameter-overrides ID="udap-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --region us-west-2
+              --region us-east-1
       - run:
           name: deploy front-end infrastructure
           command: |
@@ -256,7 +256,7 @@ jobs:
               --template-file .circleci/files/frontend.yml \
               --stack-name udapeoplep3-frontend-${CIRCLE_WORKFLOW_ID:0:7} \
               --parameter-overrides ID="udap-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --region us-west-2
+              --region us-east-1
       - run:
           name: Add back-end ip to ansible inventory
           command: |
