--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -28,7 +28,7 @@ Resources:
       InstanceType: t2.micro
       SecurityGroups:
         - Ref: InstanceSecurityGroup
-      KeyName: udacityp3
+      KeyName: udacity
       ImageId: ami-068663a3c619dd892        # Ubuntu Server 20.04 LTS (HVM), SSD Volume Type  
       Tags:
         - Key: Name
