--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -296,27 +296,41 @@ jobs:
           keys: [backend-build]
       - run:
           name: Install dependencies
+          working_directory: ./.circleci/ansible
           command: |
-            apk add --update ansible            
+            apk add --update ansible
+            ansible --version
       - run:
           name: Configure server
+          working_directory: ./.circleci/ansible
           command: |
-            pwd
-            cat .circleci/ansible/inventory.txt
-            echo ENVIRONMENT=production > "backend/.env"            
-            echo TYPEORM_CONNECTION=postgres >> "backend/.env"
-            echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >> "backend/.env"
-            echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> "backend/.env"
-            echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> "backend/.env"
-            echo NODE_ENV=production >> "backend/.env"
-            echo TYPEORM_HOST=$TYPEORM_HOST >> "backend/.env"
-            echo TYPEORM_PORT=$TYPEORM_PORT >> "backend/.env"
-            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> "backend/.env"
-            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> "backend/.env"
-            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> "backend/.env"
-            ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/configure-server.yml            
-            cat backend/.env
-            ls backend
+            pwd &&
+            ls -la
+            cat inventory
+            ansible-playbook -i inventory configure-server.yml 
+      #- run:
+      #    name: Install dependencies
+      #    command: |
+      #      apk add --update ansible            
+      #- run:
+      #    name: Configure server
+      #    command: |
+      #      pwd
+      #      cat .circleci/ansible/inventory.txt
+      #      echo ENVIRONMENT=production > "backend/.env"            
+      #      echo TYPEORM_CONNECTION=postgres >> "backend/.env"
+      #      echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >> "backend/.env"
+      #      echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> "backend/.env"
+      #      echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> "backend/.env"
+      #      echo NODE_ENV=production >> "backend/.env"
+      #      echo TYPEORM_HOST=$TYPEORM_HOST >> "backend/.env"
+      #      echo TYPEORM_PORT=$TYPEORM_PORT >> "backend/.env"
+      #      echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> "backend/.env"
+      #      echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> "backend/.env"
+      #      echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> "backend/.env"
+      #      ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/configure-server.yml            
+      #      cat backend/.env
+      #      ls backend
       - persist_to_workspace:
           root: ~/
           paths:
