--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -306,8 +306,8 @@ jobs:
           command: |
             pwd &&
             ls -la
-            cat inventory
-            ansible-playbook -i inventory configure-server.yml 
+            cat inventory.txt
+            ansible-playbook -i inventory.txt configure-server.yml 
       #- run:
       #    name: Install dependencies
       #    command: |
