--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,6 +1,5 @@
 ---
-
-- name: "configuration play." 
+- name: Configure udapeople infrastructure
   hosts: web
   user: ubuntu
   gather_facts: false
@@ -8,17 +7,14 @@
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
-    - NODE_ENV: production
-    - ENVIRONMENT: production
-    - TYPEORM_CONNECTION: postgres
-    - TYPEORM_ENTITIES: ./src/modules/domain/**/*.entity.ts
-    - TYPEORM_MIGRATIONS: ./src/migrations/*.ts
-    - TYPEORM_MIGRATIONS_DIR: ./src/migrations
-    - TYPEORM_HOST: "{{ lookup('env','TYPEORM_HOST') }}"
-    - TYPEORM_PORT: "{{ lookup('env','TYPEORM_PORT') }}"
-    - TYPEORM_USERNAME: "{{ lookup('env','TYPEORM_USERNAME') }}"
-    - TYPEORM_PASSWORD: "{{ lookup('env','TYPEORM_PASSWORD') }}"
-    - TYPEORM_DATABASE: "{{ lookup('env','TYPEORM_DATABASE') }}"
-  
   roles:
-  - configure-server
+    - configure-server
+    #- configure-prometheus-node-exporter
+  environment:
+    TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
+    TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES') }}"
+    TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
+    TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
+    TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
+    TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
+    TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
