--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -615,11 +615,12 @@ workflows:
       - deploy-frontend:
           requires: [run-migrations, deploy-backend]
 #          context: slack-secrets
-      - smoke-test:
-          requires: [deploy-backend, deploy-frontend]
+#      - smoke-test:
+#          requires: [deploy-backend, deploy-frontend]
 #          context: slack-secrets
       - cloudfront-update:
-          requires: [smoke-test]
+          requires: [deploy-backend, deploy-frontend]
+#          requires: [smoke-test]
 #          context: slack-secrets      
 #      - cleanup:
 #          requires: [cloudfront-update]
